# DBiewLite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.github/workflows/: deploy-site.yml  release.yml
crates/dbiewlite-core/: Cargo.toml  README.md
crates/dbiewlite-core/src/: lib.rs
crates/dbiewlite-tui/: Cargo.toml  README.md
crates/dbiewlite-tui/src/: app.rs  input.rs  main.rs  ui.rs
site/: index.html
src/: index.html  main.ts  style.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
web/: package.json  vite.config.ts
web/src/: index.html  main.ts  style.css
