[package]
name = "dbiewlite-app"
version = "0.1.0"
description = "A friendly SQLite viewer for data analysis"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dbiewlite_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dbiewlite-core = { path = "../crates/dbiewlite-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
