[package]
name = "dbiewlite-core"
version = "0.1.0"
description = "Shared SQLite operations for DBiewLite"
edition = "2024"
license = "MIT"
repository = "https://github.com/Ivapo/DBiewLite"
keywords = ["sqlite", "database", "viewer", "tui"]
categories = ["database"]

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
